ee_py : Intro for configparser
We will get the parameters from a file called config.ini. No more hardcoding in the tool

--- a/ee_py.ipynb
+++ b/ee_py.ipynb
@@ -11,7 +11,8 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "import configparser"
    ]
   },
   {
@@ -37,69 +38,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abbd5a38",
+   "id": "1d910780",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = ee.ImageCollection(\"IDAHO_EPSCOR/TERRACLIMATE\");"
+    "config = configparser.ConfigParser()\n",
+    "config.read(\"config.ini\")\n",
+    "start_yy = config.get(\"myvars\", \"start_yy\")\n",
+    "end_yy = config.get(\"myvars\", \"end_yy\")+1\n",
+    "start_mm = config.get(\"myvars\", \"start_mm\")\n",
+    "end_mm = config.get(\"myvars\", \"end_mm\")+1\n",
+    "\n",
+    "path = config.get(\"myvars\", \"path\")\n",
+    "band_pr = config.get(\"myvars\", \"band_pr\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e6d884f",
+   "id": "abbd5a38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in range(1,7):\n",
-    "    s_date = '2018-' + str(x) + '-1'\n",
-    "    e_date = '2018-' + str(x) + '-28'\n",
+    "data = ee.ImageCollection(\"IDAHO_EPSCOR/TERRACLIMATE\");\n",
+    "\n",
+    "for yy in range(start_yy,end_yy):\n",
     "    \n",
-    "    dataset = data.filterDate(s_date, e_date)\n",
-    "\n",
-    "    total = dataset.reduce(ee.Reducer.sum());\n",
-    "\n",
-    "    ranchi = gpd.read_file(\"./ranchi/ranchi_new.shp\")\n",
-    "\n",
-    "    js = json.loads(ranchi.to_json())\n",
-    "    shpz = ee.Geometry(ee.FeatureCollection(js).geometry())\n",
-    "\n",
-    "    stats = total.reduceRegion(\n",
-    "      reducer= ee.Reducer.mean(),\n",
-    "      geometry= shpz,\n",
-    "      scale= 5000,\n",
-    "      )\n",
-    "\n",
-    "    print(\"Amount = \",stats.get('pr_sum').getInfo())\n",
-    "\n",
-    "    count = total.reduceRegion(\n",
-    "      reducer= ee.Reducer.count(),\n",
-    "      geometry= shpz,\n",
-    "      scale= 5000,\n",
-    "      )\n",
-    "\n",
-    "    print(\"Total Pixel = \", count.get('pr_sum').getInfo())\n",
-    "\n",
-    "    totalRanchi = total.clip(shpz)\n",
-    "\n",
-    "\n",
-    "    vectors = totalRanchi.sampleRegions(\n",
-    "      collection=shpz,\n",
-    "      geometries= True,\n",
-    "      scale= 5000,\n",
-    "    )\n",
+    "    for mm in range (start_mm,end_mm):\n",
+    "        if(mm==2):\n",
+    "            day_l = 28\n",
+    "        else :\n",
+    "            day_l = 30\n",
+    "        \n",
+    "        ##for dd in range(1:day_l+1):\n",
+    "            \n",
     "    \n",
-    "    veca = 'vec_'+str(x)\n",
-    "    print(veca)\n",
-    "    \n",
-    "    task_config = {\n",
-    "      'collection': vectors,\n",
-    "      'folder': 'earthengine_all',\n",
-    "      'fileNamePrefix': veca,\n",
-    "      'fileFormat': 'CSV'}\n",
+    "            s_date = yy + '-' + str(mm) + '-1'\n",
+    "            e_date = yy + '-' + str(mm) + '-' + 'day_l'\n",
     "\n",
-    "    task=ee.batch.Export.table.toDrive(**task_config)\n",
-    "    task.start()"
+    "            dataset = data.filterDate(s_date, e_date)\n",
+    "\n",
+    "            total = dataset.reduce(ee.Reducer.sum());\n",
+    "\n",
+    "            geom = gpd.read_file(path)\n",
+    "\n",
+    "            js = json.loads(geom.to_json())\n",
+    "            shpz = ee.Geometry(ee.FeatureCollection(js).geometry())\n",
+    "\n",
+    "            stats = total.reduceRegion(\n",
+    "              reducer= ee.Reducer.mean(),\n",
+    "              geometry= shpz,\n",
+    "              scale= 5000,\n",
+    "              )\n",
+    "\n",
+    "            print(\"Amount = \",stats.get(band_pr).getInfo())\n",
+    "\n",
+    "            count = total.reduceRegion(\n",
+    "              reducer= ee.Reducer.count(),\n",
+    "              geometry= shpz,\n",
+    "              scale= 5000,\n",
+    "              )\n",
+    "\n",
+    "            print(\"Total Pixel in geometry= \", count.get(band_pr).getInfo())\n",
+    "\n",
+    "            totalclip = total.clip(shpz)\n",
+    "\n",
+    "\n",
+    "            vectors = totalclip.sampleRegions(\n",
+    "              collection=shpz,\n",
+    "              geometries= True,\n",
+    "              scale= 5000,\n",
+    "            )\n",
+    "\n",
+    "            veca = 'vec_'+str(x)\n",
+    "            print(veca)\n",
+    "\n",
+    "            task_config = {\n",
+    "              'collection': vectors,\n",
+    "              'folder': 'earthengine_all',\n",
+    "              'fileNamePrefix': veca,\n",
+    "              'fileFormat': 'CSV'}\n",
+    "\n",
+    "            task=ee.batch.Export.table.toDrive(**task_config)\n",
+    "            task.start()"
    ]
   },
   {
