ee_py : Multiple Updates
*Band selection at top
*FeatureCollection explicit change from feature in valvec

--- a/ee_py.ipynb
+++ b/ee_py.ipynb
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc1d3904",
+   "id": "64bfc84a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,8 @@
    "source": [
     "data = ee.ImageCollection(\"IDAHO_EPSCOR/TERRACLIMATE\");\n",
     "\n",
+    "data_band = data.select(band_ee)\n",
+    "\n",
     "for yy in range(start_yy,end_yy):\n",
     "    \n",
     "    for mm in range (start_mm,end_mm):\n",
@@ -78,7 +80,7 @@
     "            s_date = str(yy) + '-' + str(mm) + '-1'\n",
     "            e_date = str(yy) + '-' + str(mm) + '-' + str(day_l)\n",
     "\n",
-    "            dataset = data.filterDate(s_date, e_date)\n",
+    "            dataset = data_band.filterDate(s_date, e_date)\n",
     "\n",
     "            total = dataset.reduce(ee.Reducer.sum());\n",
     "\n",
@@ -93,7 +95,7 @@
     "              scale= 5000,\n",
     "              )\n",
     "\n",
-    "            print(\"Amount = \",stats.get(band_ee).getInfo())\n",
+    "            print(\"Amount = \",stats.getInfo())\n",
     "\n",
     "            count = total.reduceRegion(\n",
     "              reducer= ee.Reducer.count(),\n",
@@ -101,7 +103,7 @@
     "              scale= 5000,\n",
     "              )\n",
     "\n",
-    "            print(\"Total Pixel in geometry= \", count.get(band_ee).getInfo())\n",
+    "            print(\"Total Pixel in geometry= \", count.getInfo())\n",
     "\n",
     "            totalclip = total.clip(shpz)\n",
     "\n",
@@ -111,12 +113,12 @@
     "              geometries= True,\n",
     "              scale= 5000,\n",
     "            )\n",
-    "            valvec = vectors.get('pr_sum').getInfo()\n",
+    "            valvec = vectors\n",
     "            veca = 'vec_'+str(mm)+\"_\"+str(yy)\n",
     "            print(veca)\n",
     "\n",
     "            task_config = {\n",
-    "              'collection': ee.FeatureCollection([valvec]),\n",
+    "              'collection': ee.FeatureCollection(valvec),\n",
     "              'folder': folder,\n",
     "              'description' : veca,\n",
     "              'fileNamePrefix': veca,\n",
